translation-tool/inputs/source_meta/objects/Hsvc_RecommendedAction__c.object
<CustomObject>
    <description>CSM can maintain the text/description that should be auto populated on the Recommended Action (Recommended Next Steps) text field when a specific Service Provider is selected on a Hughes Truck Roll work order for Enterprise and Consumer Account</description>
    <fields>
        <fullName>RecommendedActionID__c</fullName>
        <label>Recommended Action ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecommendedAction__c</fullName>
        <label>Recommended Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceProvider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recommended Actions</relationshipLabel>
        <relationshipName>Recommended_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recommended Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recommended Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommended Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>